--- a/style.css
+++ b/style.css
@@ -7,7 +7,65 @@ html, body, #renderCanvas {
     background-color: white;
 }
 
+.infront {
+    z-index: 2;
+    position: absolute;
+    width:100%;
+    height:100%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    pointer-events: none;
+}
+
+.productName {
+    width: 100%;
+    height:50%;
+}
+
+#productText {
+    margin: 2%;
+    width: 60%;
+}
+
+.controls {
+    width: 100%;
+    height:50%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+
+#handButton {
+    width: 20%;
+    max-width: 400px;
+    height: auto;
+    margin-bottom:3%;
+    margin-right: 1.5%;
+    margin-left: 3%;
+}
+
+#resetButton {
+    width: 20%;
+    max-width: 400px;
+    height: auto;
+    margin-bottom: 3%;
+    margin-left: 1.5%;
+    margin-right: 3%;
+}
+
+.behind {
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    pointer-events: all;
+}
+
 canvas {
+    position: absolute;
     width: 100%;
     height: 100%;
 }
